<resources>
    <string name="app_name">Fitness Application</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="personal_info">Personal Info</string>
    <string name="age">Age</string>
    <string name="weight">Weight(in KG)</string>
    <string name="height">Height(in CM)</string>
    <string name="save_all_data">Save all data</string>
    <string name="admin_username">admin</string>
    <string name="admin_password">admin</string>
    <string name="please_select_your_gender">Please select your gender</string>
    <string name="name">Name</string>
    <string name="info_about_you">Info about you</string>

    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="activities">
        <item>Sedentary: little or no exercise</item>
        <item>Exercise 1-3 times/week</item>
        <item>Exercise 4-5 times/week</item>
        <item>Daily exercise or intense exercise 3-4 times/week</item>
        <item>Intense exercise 6-7 times/week</item>
        <item>Very intense exercise daily, or physical job</item>
    </string-array>

    <string-array name="typeOfGeneratedMeal">
        <item>Day</item>
        <item>Week</item>
    </string-array>

    <string-array name="intensityActivityLevel">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="URL_FOR_FOOD"><![CDATA[https://api.nal.usda.gov/fdc/v1/foods/search?api_key=Tv9PgEGWmPcfjKcBtv6TJeWuYOWwHLcfrEFjHuPJ&query=]]></string>
    <string name="set_water">Set water</string>
</resources>