<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:padding="10dp"
    android:orientation="vertical"
    tools:context=".FitnessApp.Login.SignInActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:text="@string/sign_in"
        android:textColor="@color/black"
        android:textSize="50dp"
        android:textStyle="bold"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="50dp"
        />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/edittext_background"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="25dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/edtPassword"
        android:hint="@string/password"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:inputType="textPassword"
        android:textSize="25dp"
        android:background="@drawable/edittext_background"
        android:layout_marginBottom="30dp"
        android:paddingLeft="20dp"
        />

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/rounded_button_black"
        android:text="@string/sign_in"
        android:id="@+id/signIn"
        android:textSize="22dp"
        android:textStyle="bold"
        android:textColor="#FFEB3B"/>


</LinearLayout>